[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_runner"
version = "0.0.1"
authors = [
  { name="Oleksii Minaiev", email="alexm122322@gmail.com" },
]
description = "A small package for running tests"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]  # Optional
sample = "sample:main"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]

python_classes = []