[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spytests"
version = "0.0.3"
authors = [
  { name="Oleksii Minaiev", email="alexm122322@gmail.com" },
]
description = "A small package for running tests"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexm122322/test_runner"
"Bug Tracker" = "https://github.com/alexm122322/test_runner/issues"

[project.scripts]
spytests = "spytests:main"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]

python_classes = []

[pytest]
mock_use_standalone_module = true